2004-10-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (game_new_callback): Implement Anton Gavrilov's
	suggestion to start a new game when the scores window is closed
	(bug #154542).

2004-09-09  callum  <callum@spooky-possum.org>

	* help/C/glines.xml: Bumped the version number.

2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* classic.png:
	* dots.png:
	* pulse.png:	
	* gumball.png: Moved these themes to the gnome-games-extra-data
	package.

2004-07-08  Paolo Borelli  <pborelli@katamail.com>

	* glines.c: rework grid drawing so that right and
	bottom borders are shown.

2004-06-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: Rework line-detection code so multiple balls
	can be dropped before checking. Fixes bug #142072.

2004-04-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c: 
	* glines.desktop.in: Rename to "Five or More".

2004-03-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/glines.xml:	
	* help/C/figures/*: Updates for 2.6. 

2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (load_image): Removed the _has_separator calls from message
	dialogs.

2004-02-11  Richard Hoelscher  <rah@rahga.com>

	* glines.c (bg_color_callback): Set saving background color as
	a 12-digit hex triplet. Bug #134179.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (game_about_callback): translator_credits ->
	translator-credits.

2004-01-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* shapes.svg: Updates from Richard Hoelscher.

2004-01-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* glines.c (button_press_event): Ignore double and triple
	clicks. Just like for Mahjongg. Richard Hoelscher pointed this out
	in bug #132010.

2004-01-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* balls.svg: Reworked version from Richard Hoelscher. Smaller file
	and wobble-free graphics.

2004-01-10  Callum McKenzie  <callum@physics.otago.ac.nz>
